@@ -23,11 +23,14 @@ $lang = array(
     'amapnews:add:excerpt:help' => "Set a summary for this post. It will be displayed in news list.",
     'amapnews:add:description' => "Description",
     'amapnews:add:description:help' => "Enter the main text for this post. It will be displayed on full view.",
-    'amapnews:add:featured' => "Set as featured",
+    'amapnews:add:featured' => "Set featured",
     'amapnews:add:featured:help' => "Check this for setting this item as featured. It could be used in special sections like widgets, landing page etc.",
     'amapnews:add:unfeatured' => "Unset featured",
     'amapnews:add:tags' => "Tags",
     'amapnews:add:tags:help' => "Enter some tags.",
+    'amapnews:add:photo' => "Photo",
+    'amapnews:add:photo:help' => "If photo is available, upload a valid image file (.png or .jpg or gif).",
+    'amapnews:add:photo:invalid' => 'Invalid file type for photo. It must be png or gif or jpg.',
     'amapnews:add:submit' => "Submit",
     'amapnews:add:tonews' => "Add to news",
     'amapnews:add:novalidentity' => "No valid entity for adding to news",
